# gospl_extensions

./: .gitignore  CHANGELOG.md  README.md  TESTING_SUMMARY.md  pyproject.toml  run_tests.py  test_enhanced_model_simple.py
cpp_interface/: .gitignore  Makefile  README.md  SUCCESS_SUMMARY.md  debug_test.cpp  enhanced_model_advanced_driver  enhanced_model_advanced_driver.cpp  enhanced_model_driver.cpp  gospl_extensions.cpp  gospl_extensions.h  gospl_python_interface.py  interface_demo.cpp  simple_test.cpp  test_config.yml  test_interface.cpp
cpp_interface/coupling_test/: gospl_config_example.yml
cpp_interface/cpp_interface/: gospl_python_interface.py
examples/: __init__.py  advanced_example.py  basic_example.py  data_driven_tectonics_advanced.py  data_driven_tectonics_basic.py  enhanced_model_advanced.py  enhanced_model_example.py  input.yml  velocity_data.csv
examples/escarpment/: gospl.xdmf
examples/escarpment/xmf/: gospl0.xmf
gospl_model_ext/: __init__.py  enhanced_model.py
gospl_tectonics_ext/: __init__.py  data_driven_tectonics.py
tests/: __init__.py  test_data_driven_tectonics.py  test_enhanced_model.py
