[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gospl_extensions"
version = "0.1.0"
description = "Extensions for goSPL (landscape evolution model)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GeoFLAC", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov",
]
examples = [
    "pandas",
    "matplotlib",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pandas",
    "matplotlib",
    "black",
    "flake8",
]

# Note: goSPL is not listed as a pip dependency because it must be installed
# via conda in the 'gospl' environment. Users must activate the gospl conda
# environment before installing or using this package.

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov",
]
examples = [
    "pandas",
    "matplotlib",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pandas",
    "matplotlib",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/GeoFLAC/gospl_extensions"
"Bug Reports" = "https://github.com/GeoFLAC/gospl_extensions/issues"
"Source" = "https://github.com/GeoFLAC/gospl_extensions"

[tool.setuptools.packages.find]
include = ["gospl_tectonics_ext*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
